--- a/paginas/Contacto.html
+++ b/paginas/Contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Globo Rojo - Noticias locales con informacion actual, categorias y contacto directo">
     <meta name="keywords" content="noticias, locales, globo rojo, categorias, actualidad, informacion">
-    <title>Globo Rojo</title>
+    <title>Globo Rojo-Contacto</title>
     <link rel="stylesheet" href="../dist/css/main.css">
     <link rel="icon" type="image/x-icon" href="../imagenes/favicon/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="../imagenes/favicon/favicon-32x32.png">
