Aplicando cambios en pagina de deportes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="#" class="menu-icon"><img src="./imagenes/icons/menu.png" alt="Menú"></a></li>
                 <li><a href="#">ULTIMO MOMENTO</a></li>
                 <li><a href="#">SOCIEDAD</a></li>
-                <li><a href="#">DEPORTES</a></li>
+                <li><a href="./paginas/Deportes.html">DEPORTES</a></li>
                 <li><a href="#">POLITICA</a></li>
                 <li><a href="#">CULTURA</a></li>
                 <li><a href="#">EDUCACION</a></li>
@@ -57,7 +57,7 @@
         <div class="columna-principal">
             <article class="noticia-grande">
                 <a href="#" class="noticia-img">
-                    <img src="./imagenes/noticias/ultimo-momento/ultimo1.jpg" alt="Incendio de vivienda">
+                    <img src="./imagenes/noticias/ultimo-momento/ultimo1.jpg" alt="Foto noticia">
                 </a>
                 <div class="noticia-texto">
                     <a href="#"><h2 class="titulo">En Rojas: Voraz incendio destruyó una vivienda en Barrio Progreso</h2></a>
@@ -67,7 +67,7 @@
             </article>
             <article class="noticia-grande">
                 <a href="#" class="noticia-img">
-                    <img src="./imagenes/noticias/ultimo-momento/utlimo6.jpg" alt="">
+                    <img src="./imagenes/noticias/ultimo-momento/utlimo6.jpg" alt="Foto noticia">
                 </a>
                 <div class="noticia-texto">
                     <a href="#"><h2 class="titulo">Se incendió un auto en la Ruta Prov 30 en jurisdicción de Rojas, en cercanías del acceso a Los Indios </h2></a>
@@ -82,7 +82,7 @@
 
             <article class="noticia-chica">
                 <a href="#" class="noticia-img">
-                    <img src="./imagenes/noticias/ultimo-momento/ultimo2.jpg" alt="Accidente vehicular">
+                    <img src="./imagenes/noticias/ultimo-momento/ultimo2.jpg" alt="Foto noticia">
                 </a>
                 <div class="noticia-texto">
                     <a href="#"><h3 class="titulo">Accidente vehicular en la Ruta Prov. 31, dos personas lesionadas</h3></a>
@@ -93,7 +93,7 @@
 
             <article class="noticia-chica">
                 <a href="#" class="noticia-img">
-                    <img src="./imagenes/noticias/ultimo-momento/ultimo3.jpg" alt="Incendio de vehículo">
+                    <img src="./imagenes/noticias/ultimo-momento/ultimo3.jpg" alt="Foto noticia">
                 </a>
                 <div class="noticia-texto">
                     <a href="#"><h3 class="titulo">Se incendió un vehículo en Ruta 188; no hubo heridos</h3></a>
@@ -104,7 +104,7 @@
 
             <article class="noticia-chica">
                 <a href="#" class="noticia-img">
-                    <img src="./imagenes/noticias/ultimo-momento/ultimo4.jpg" alt="Choque en Rojas">
+                    <img src="./imagenes/noticias/ultimo-momento/ultimo4.jpg" alt="Foto noticia">
                 </a>
                 <div class="noticia-texto">
                     <a href="#"><h3 class="titulo">Chocan moto y camioneta en Rojas; dos mujeres heridas</h3></a>
@@ -115,7 +115,7 @@
 
             <article class="noticia-chica">
                 <a href="#" class="noticia-img">
-                    <img src="./imagenes/noticias/ultimo-momento/ultimo5.jpg" alt="Auto incendiado">
+                    <img src="./imagenes/noticias/ultimo-momento/ultimo5.jpg" alt="Foto noticia">
                 </a>
                 <div class="noticia-texto">
                     <a href="#"><h3 class="titulo">Se incendió un auto en la ciudad de Rojas</h3></a>
@@ -128,17 +128,14 @@
 </section>
     <section class="seccion-noticias-2">
     <div class="container-2">
-        
         <div class="columnas-noticias">
-
-            <!-- COLUMNA 1 -->
             <div class="columna-noticia">
                 <div class="categoria-1">SOCIEDAD</div>
                 <div class="divider-2"></div>
 
                 <article class="noticia-1">
                     <a href="#" class="imagen-1">
-                        <img src="./imagenes/noticias/sociedad/sociedad1.jpg" alt="Jornada Informativa">
+                        <img src="./imagenes/noticias/sociedad/sociedad1.jpg" alt="Foto noticia">
                     </a>
                     <div class="contenido-1">
                         <a href="#"><h2>Rojas fue sede de una jornada informativa sobre adopción</h2></a>
@@ -150,7 +147,7 @@
                 <div class="noticias-p">
                     <article class="noticia-p">
                         <a href="#" class="imagen-p">
-                            <img src="./imagenes/noticias/sociedad/sociedad2.jpg" alt="Foto">
+                            <img src="./imagenes/noticias/sociedad/sociedad2.jpg" alt="Foto noticia">
                         </a>
                         <div class="contenido-p">
                             <a href="#"><h3>El Taller Protegido, el Centro de Día de Rojas y Bayer.</h3></a>
@@ -160,7 +157,7 @@
 
                     <article class="noticia-p">
                         <a href="#" class="imagen-p">
-                            <img src="./imagenes/noticias/sociedad/sociedad3.jpg" alt="Foto">
+                            <img src="./imagenes/noticias/sociedad/sociedad3.jpg" alt="Foto noticia">
                         </a>
                         <div class="contenido-p">
                             <a href="#"><h3>El Rotary Club Rojas presentó sus nuevas autoridades…</h3></a>
@@ -170,7 +167,7 @@
 
                     <article class="noticia-p">
                         <a href="#" class="imagen-p">
-                            <img src="./imagenes/noticias/sociedad/sociedad4.jpg" alt="Foto">
+                            <img src="./imagenes/noticias/sociedad/sociedad4.jpg" alt="Foto noticia">
                         </a>
                         <div class="contenido-p">
                             <a href="#"><h3>Charla sobre Cooperativismo…</h3></a>
@@ -179,15 +176,13 @@
                     </article>
                 </div>
             </div>
-
-            <!-- COLUMNA 2 -->
             <div class="columna-noticia">
                 <div class="categoria-1">DEPORTES</div>
                 <div class="divider-2"></div>
 
                 <article class="noticia-1">
                     <a href="#" class="imagen-1">
-                        <img src="./imagenes/noticias/deportes/deporte1.jpg" alt="Foto">
+                        <img src="./imagenes/noticias/deportes/deporte1.jpg" alt="Foto noticia">
                     </a>
                     <div class="contenido-1">
                         <a href="#"><h2>El Club Jorge Newbery es el Campeón 2025…</h2></a>
@@ -200,7 +195,7 @@
 
                     <article class="noticia-p">
                         <a href="#" class="imagen-p">
-                            <img src="./imagenes/noticias/deportes/deporte2.jpg" alt="Foto">
+                            <img src="./imagenes/noticias/deportes/deporte2.jpg" alt="Foto noticia">
                         </a>
                         <div class="contenido-p">
                             <a href="#"><h3>El rojense Joaquín Nota y Cristian Bohn…</h3></a>
@@ -210,7 +205,7 @@
 
                     <article class="noticia-p">
                         <a href="#" class="imagen-p">
-                            <img src="./imagenes/noticias/deportes/deporte3.jpg" alt="Foto">
+                            <img src="./imagenes/noticias/deportes/deporte3.jpg" alt="Foto noticia">
                         </a>
                         <div class="contenido-p">
                             <a href="#"><h3>El Fútbol Juvenil de Rojas ya tiene dos finalistas…</h3></a>
@@ -220,7 +215,7 @@
 
                     <article class="noticia-p">
                         <a href="#" class="imagen-p">
-                            <img src="./imagenes/noticias/deportes/deporte4.jpg" alt="Foto">
+                            <img src="./imagenes/noticias/deportes/deporte4.jpg" alt="Foto noticia">
                         </a>
                         <div class="contenido-p">
                             <a href="#"><h3>Sportivo Rojas finalizó la temporada 2025…</h3></a>
@@ -255,6 +250,5 @@
     </div>
     </div>
 </footer>
-
 </body>
 </html>
