--- a/paginas/Contacto.html
+++ b/paginas/Contacto.html
@@ -34,7 +34,7 @@
                 <li><a href="#" class="menu-icon"><img src="../imagenes/icons/menu.png" alt="Menú"></a></li>
                 <li><a href="#">ULTIMO MOMENTO</a></li>
                 <li><a href="#">SOCIEDAD</a></li>
-                <li><a href="#">DEPORTES</a></li>
+                <li><a href="../paginas/Deportes.html">DEPORTES</a></li>
                 <li><a href="#">POLITICA</a></li>
                 <li><a href="#">CULTURA</a></li>
                 <li><a href="#">EDUCACION</a></li>
