--- a/paginas/Deportes.html
+++ b/paginas/Deportes.html
@@ -49,16 +49,15 @@
         <div class="cat-divider"></div>
         <article class="cat-main-article">
             <div class="cat-main-img">
-                <img src="../imagenes/noticias/deportes/deporte1.jpg" alt="Noticia principal">
+                <img src="../imagenes/noticias/deportes/deporte1.jpg" alt="Foto noticia">
             </div>
 
             <div class="cat-main-content">
-                <h1>Título de la noticia principal</h1>
+                <a href="#"><h1>El Club Jorge Newbery es el Campeón 2025 del Fútbol de Rojas  El Huracán es el Subcampeón </h1></a>
                 <span class="cat-date">02/12/2025</span>
-                <p>
-                    Texto ampliado de la noticia principal. Un resumen más largo que acompaña
-                    la imagen y mantiene el diseño de tu sitio.
+                <p>La definición de la Finalisima por el trofeo 🏆 » Luis Omar Polaco Alvarado», se extendió a los penales tras finalizar los 90 empatados 1 a 1
                 </p>
+                <a href="#" class="btn-leer">Leer más</a>
             </div>
         </article>
 
@@ -66,48 +65,76 @@
             <div class="cat-col">
                 <article class="cat-item">
                     <div class="cat-item-img">
-                        <img src="../imagenes/noticias/deportes/deporte2.jpg" alt="Noticia secundaria 1">
+                        <img src="../imagenes/noticias/deportes/deporte2.jpg" alt="Foto noticia">
                     </div>
                     <div class="cat-item-content">
-                        <h2>Título noticia secundaria 1</h2>
+                        <a href="#"><h2>El rojense Joaquín Nota y Cristian Bohn de Inés Indart, son los campeones del Rojas Máster Challenger de Pádel </h2></a>
                         <span class="cat-date">01/12/2025</span>
-                        <p>Resumen breve de la noticia secundaria.</p>
+                        <p>Cerrando una brillante temporada, Joaquín pudo ser «profeta en su tierra», al coronarse junto a Bohn en la edición 2025</p>
+                        <a href="#" class="btn-leer">Leer más</a>
                     </div>
                 </article>
 
                 <article class="cat-item">
                     <div class="cat-item-img">
-                        <img src="../imagenes/noticias/deportes/deporte3.jpg" alt="Noticia secundaria 2">
+                        <img src="../imagenes/noticias/deportes/deporte3.jpg" alt="Foto noticia">
                     </div>
                     <div class="cat-item-content">
-                        <h2>Título noticia secundaria 2</h2>
+                        <a href="#"><h2>El Fútbol Juvenil de Rojas ya tiene dos finalistas del Clausura 2025: El Huracán en Sub-15 y El Deportivo Unión en Sub-17 </h2></a>
                         <span class="cat-date">30/11/2025</span>
-                        <p>Otro resumen breve de ejemplo.</p>
+                        <p>Los partidos que definieron las semifinales del Torneo «Jeremías Martino», se jugaron este viernes 28/11 desde las 19 horas
+</p>
+                        <a href="#" class="btn-leer">Leer más</a>
                     </div>
                 </article>
+                <article class="cat-item">
+                    <div class="cat-item-img">
+                        <img src="../imagenes/noticias/deportes/deportes7.jpg" alt="Foto noticia">
+                    </div>
+                    <div class="cat-item-content">
+                        <a href="#"><h2>Brillante triunfo del jockey rojense Gustavo Calvente en Perú </h2></a>
+                        <span class="cat-date">25/11/2025</span>
+                        <p>Turf 🏇 Brillante triunfo del jockey rojense Gustavo Calvente en Perú Este domingo 23/11 logró su segunda victoria con Khamal,</p>
+                        <a href="#" class="btn-leer">Leer más</a>
+                    </div>
+                </article>
+                
             </div>
             <div class="cat-col">
                 <article class="cat-item">
                     <div class="cat-item-img">
-                        <img src="../imagenes/noticias/deportes/deporte4.jpg" alt="Noticia secundaria 3">
+                        <img src="../imagenes/noticias/deportes/deporte4.jpg" alt="Foto noticia">
                     </div>
                     <div class="cat-item-content">
-                        <h2>Título noticia secundaria 3</h2>
+                        <a href="#"><h2>Sportivo Rojas finalizó la temporada 2025 entre los mejores cuatro del Torneo Clausura </h2></a>
                         <span class="cat-date">27/11/2025</span>
-                        <p>Resumen de esta noticia secundaria.</p>
+                        <p>🏀🇾🇪 Básquet 🇾🇪 Sportivo Rojas finalizó la temporada 2025 entre los mejores cuatro del Torneo Clausura Este último lunes 24/11</p>
+                        <a href="#" class="btn-leer">Leer más</a>
                     </div>
                 </article>
 
                 <article class="cat-item">
                     <div class="cat-item-img">
-                        <img src="../imagenes/noticias/deportes/deportes5.jpg" alt="Noticia secundaria 4">
+                        <img src="../imagenes/noticias/deportes/deportes8.jpg" alt="Foto noticia">
                     </div>
                     <div class="cat-item-content">
-                        <h2>Título noticia secundaria 4</h2>
+                        <a href="#"><h2>Fútbol Juvenil en Rojas - Se jugó la 10ma fecha del Clausura 2025</h2></a>
                         <span class="cat-date">25/11/2025</span>
-                        <p>Breve texto informativo final.</p>
+                        <p>Los partidos se disputaron este sábado 22/11 en las siguientes canchas ⏬ ⚽ Boca Juniors recibió a Argentino ⏬ 🥅Sub-12</p>
+                        <a href="#" class="btn-leer">Leer más</a>
                     </div>
                 </article>
+                <article class="cat-item">
+                    <div class="cat-item-img">
+                        <img src="../imagenes/noticias/deportes/deportes6.jpg" alt="Foto noticia">
+                    </div>
+                    <div class="cat-item-content">
+                        <a href="#"><h2>Pádel: El jóven rojense Joaquín Nota ganó un importante Torneo en Colón </h2></a>
+                        <span class="cat-date">25/11/2025</span>
+                        <p>Y este sábado y domingo próximos, será protagonista del Rojas Master Challenger de la AJPR Asociación de jugadores de primera</p>
+                        <a href="#" class="btn-leer">Leer más</a>
+                    </div>
+                </article>               
             </div>
 
         </div>
