Creando pagina Noticia

--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
                 <div class="divider-2"></div>
 
                 <article class="noticia-1">
-                    <a href="#" class="imagen-1">
+                    <a href="./paginas/Noticia.html" class="imagen-1">
                         <img src="./imagenes/noticias/deportes/deporte1.jpg" alt="Foto noticia">
                     </a>
                     <div class="contenido-1">
-                        <a href="#"><h2>El Club Jorge Newbery es el Campeón 2025…</h2></a>
+                        <a href="./paginas/Noticia.html"><h2>El Club Jorge Newbery es el Campeón 2025</h2></a>
                         <span>24/11/2025</span>
                         <p>La definición de la Finalísima por el trofeo…</p>
                     </div>
