--- a/paginas/Deportes.html
+++ b/paginas/Deportes.html
@@ -53,11 +53,11 @@
             </div>
 
             <div class="cat-main-content">
-                <a href="#"><h1>El Club Jorge Newbery es el Campeón 2025 del Fútbol de Rojas  El Huracán es el Subcampeón </h1></a>
+                <a href="../paginas/Noticia.html"><h1>El Club Jorge Newbery es el Campeón 2025 del Fútbol de Rojas  El Huracán es el Subcampeón </h1></a>
                 <span class="cat-date">02/12/2025</span>
                 <p>La definición de la Finalisima por el trofeo 🏆 » Luis Omar Polaco Alvarado», se extendió a los penales tras finalizar los 90 empatados 1 a 1
                 </p>
-                <a href="#" class="btn-leer">Leer más</a>
+                <a href="../paginas/Noticia.html" class="btn-leer">Leer más</a>
             </div>
         </article>
 
